@@ -62,7 +62,7 @@ if %MAJOR_JAVA_VER% LSS 8 (
 :checkIgniteHome1
 pushd "%~dp0"
 set IGNITE_HOME=%CD%
-popd
+
 goto :checkIgniteHome2
 
 :checkIgniteHome2
@@ -83,6 +83,13 @@ goto checkIgniteHome2
 :run_java
 
 ::
+:: JVM options. See http://java.sun.com/javase/technologies/hotspot/vmoptions.jsp for more details.
+::
+:: ADD YOUR/CHANGE ADDITIONAL OPTIONS HERE
+::
+if "%JVM_OPTS%" == "" set JVM_OPTS=-Xms1g -Xmx1g -server -XX:MaxMetaspaceSize=256m
+
+::
 :: Final JVM_OPTS for Java 9+ compatibility
 ::
 if %MAJOR_JAVA_VER% == 8 (
@@ -100,7 +107,6 @@ if %MAJOR_JAVA_VER% GEQ 9 if %MAJOR_JAVA_VER% LSS 11 (
     --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED ^
     --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED ^
     --illegal-access=permit ^
-    --add-modules=java.transaction ^
     --add-modules=java.xml.bind ^
     %JVM_OPTS%
 )
